--- a/demo/less/styles.less
+++ b/demo/less/styles.less
@@ -15,7 +15,7 @@ p {
 	margin-bottom: 1.6em;
 }
 
-.hero-unit {
+.jumbotron {
     margin-bottom: 0;
 
     h1 {
@@ -95,7 +95,7 @@ section {
 	font-weight: bold;
 }
 
-#tbHero .hero-unit {
+#tbHero .jumbotron {
 	width: 650px;
 
 	h1 {
@@ -136,7 +136,7 @@ section {
 	}
 }
 
-.maintenance .hero-unit {
+.maintenance .jumbotron {
 	text-align: center;
 
 	p {
