--- a/demo/protected/extensions/less/lib/lessphp/test/Less/Tests/Fixtures/less.php/less/imports/patterns.less
+++ b/demo/protected/extensions/less/lib/lessphp/test/Less/Tests/Fixtures/less.php/less/imports/patterns.less
@@ -25,7 +25,7 @@
   // Hover and active states
   // h3 for backwards compatibility
   h3 a:hover,
-  .brand:hover,
+  .navbar-brand:hover,
   ul .active > a {
     background-color: #333;
     background-color: rgba(255,255,255,.05);
@@ -39,7 +39,7 @@
     position: relative;
   }
   h3 a,
-  .brand {
+  .navbar-brand {
     float: left;
     display: block;
     padding: 8px 20px 12px;
